--- a/lesson4-spring-boot/src/main/resources/notfound.html
+++ b/lesson4-spring-boot/src/main/resources/notfound.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments/navigationbar.html :: head"/>
+<head th:replace="fragments/head.html :: head"/>
 
 <body>
 
-<nav th:replace="fragments/navigationbar.html :: navbar ('none')"/>
+<nav th:replace="fragments/head.html :: navbar ('none')"/>
 
 <div class="container">
     <div class="row py-2">
